Entrega 2/y.output
Terminals unused in grammar

   GUION_BAJO
   DOS_PUNTOS
   ENDIF
   C_A
   C_C


Grammar

    0 $accept: programa $end

    1 $@1: /* empty */

    2 programa: $@1 sentencia_declaracion algoritmo

    3 sentencia_declaracion: sentencia_declaracion bloque_declaracion_variables
    4                      | bloque_declaracion_variables

    5 bloque_declaracion_variables: DIM MENOR lista_variables MAYOR AS MENOR tipos_variables MAYOR

    6 lista_variables: lista_variables COMA ID
    7                | ID

    8 tipos_variables: tipos_variables COMA tipo_variable
    9                | tipo_variable

   10 tipo_variable: INTEGER
   11              | FLOAT
   12              | STRING

   13 algoritmo: bloque

   14 bloque: sentencia PUNTO_COMA
   15       | bloque sentencia PUNTO_COMA
   16       | bloque sentencia
   17       | sentencia

   18 sentencia: decision
   19          | asignacion
   20          | put
   21          | get
   22          | iteracion
   23          | asignacion_constante

   24 $@2: /* empty */

   25 decision: IF P_A condicion P_C L_A bloque L_C $@2 ELSE L_A bloque L_C
   26         | IF P_A condicion P_C L_A bloque L_C

   27 asignacion: ID ASIG expresion

   28 $@3: /* empty */

   29 asignacion_constante: CONST ID $@3 ASIG expresion

   30 lista_expresiones: lista_expresiones COMA expresion
   31                  | expresion

   32 $@4: /* empty */

   33 maximo: MAXIMO $@4 P_A lista_expresiones P_C

   34 $@5: /* empty */

   35 iteracion: WHILE $@5 P_A condicion P_C L_A bloque L_C

   36 put: PUT ID
   37    | PUT CTE_INT
   38    | PUT CTE_REAL
   39    | PUT CTE_STRING

   40 get: GET ID

   41 condicion: comparacion
   42          | comparacion_doble
   43          | comparacion_negada

   44 comparacion_negada: NOT P_A comparacion P_C

   45 comparacion_doble: comparacion AND comparacion
   46                  | P_A comparacion P_C AND P_A comparacion P_C
   47                  | comparacion OR comparacion
   48                  | P_A comparacion P_C OR P_A comparacion P_C

   49 $@6: /* empty */

   50 comparacion: expresion $@6 IGUAL expresion

   51 $@7: /* empty */

   52 comparacion: expresion $@7 DISTINTO expresion

   53 $@8: /* empty */

   54 comparacion: expresion $@8 MAYOR expresion

   55 $@9: /* empty */

   56 comparacion: expresion $@9 MENOR expresion

   57 $@10: /* empty */

   58 comparacion: expresion $@10 MAYOR_IGUAL expresion

   59 $@11: /* empty */

   60 comparacion: expresion $@11 MENOR_IGUAL expresion

   61 $@12: /* empty */

   62 expresion: expresion $@12 OP_SUMA termino

   63 $@13: /* empty */

   64 expresion: expresion $@13 OP_RESTA termino
   65          | termino

   66 $@14: /* empty */

   67 termino: termino $@14 OP_MULT factor

   68 $@15: /* empty */

   69 termino: termino $@15 OP_DIV factor
   70        | factor

   71 factor: ID
   72       | CTE_INT
   73       | CTE_REAL
   74       | CTE_STRING
   75       | P_A expresion P_C
   76       | maximo


Terminals, with rules where they appear

$end (0) 0
error (256)
ID (258) 6 7 27 29 36 40 71
CTE_INT (259) 37 72
CTE_STRING (260) 39 74
CTE_REAL (261) 38 73
ASIG (262) 27 29
OP_SUMA (263) 62
OP_RESTA (264) 64
OP_MULT (265) 67
OP_DIV (266) 69
MENOR (267) 5 56
MAYOR (268) 5 54
IGUAL (269) 50
DISTINTO (270) 52
MENOR_IGUAL (271) 60
MAYOR_IGUAL (272) 58
AND (273) 45 46
OR (274) 47 48
NOT (275) 44
INTEGER (276) 10
FLOAT (277) 11
STRING (278) 12
GUION_BAJO (279)
COMA (280) 6 8 30
PUNTO_COMA (281) 14 15
DOS_PUNTOS (282)
IF (283) 25 26
ELSE (284) 25
ENDIF (285)
DIM (286) 5
AS (287) 5
CONST (288) 29
P_A (289) 25 26 33 35 44 46 48 75
P_C (290) 25 26 33 35 44 46 48 75
C_A (291)
C_C (292)
L_A (293) 25 26 35
L_C (294) 25 26 35
PUT (295) 36 37 38 39
GET (296) 40
WHILE (297) 35
MAXIMO (298) 33


Nonterminals, with rules where they appear

$accept (44)
    on left: 0
programa (45)
    on left: 2, on right: 0
$@1 (46)
    on left: 1, on right: 2
sentencia_declaracion (47)
    on left: 3 4, on right: 2 3
bloque_declaracion_variables (48)
    on left: 5, on right: 3 4
lista_variables (49)
    on left: 6 7, on right: 5 6
tipos_variables (50)
    on left: 8 9, on right: 5 8
tipo_variable (51)
    on left: 10 11 12, on right: 8 9
algoritmo (52)
    on left: 13, on right: 2
bloque (53)
    on left: 14 15 16 17, on right: 13 15 16 25 26 35
sentencia (54)
    on left: 18 19 20 21 22 23, on right: 14 15 16 17
decision (55)
    on left: 25 26, on right: 18
$@2 (56)
    on left: 24, on right: 25
asignacion (57)
    on left: 27, on right: 19
asignacion_constante (58)
    on left: 29, on right: 23
$@3 (59)
    on left: 28, on right: 29
lista_expresiones (60)
    on left: 30 31, on right: 30 33
maximo (61)
    on left: 33, on right: 76
$@4 (62)
    on left: 32, on right: 33
iteracion (63)
    on left: 35, on right: 22
$@5 (64)
    on left: 34, on right: 35
put (65)
    on left: 36 37 38 39, on right: 20
get (66)
    on left: 40, on right: 21
condicion (67)
    on left: 41 42 43, on right: 25 26 35
comparacion_negada (68)
    on left: 44, on right: 43
comparacion_doble (69)
    on left: 45 46 47 48, on right: 42
comparacion (70)
    on left: 50 52 54 56 58 60, on right: 41 44 45 46 47 48
$@6 (71)
    on left: 49, on right: 50
$@7 (72)
    on left: 51, on right: 52
$@8 (73)
    on left: 53, on right: 54
$@9 (74)
    on left: 55, on right: 56
$@10 (75)
    on left: 57, on right: 58
$@11 (76)
    on left: 59, on right: 60
expresion (77)
    on left: 62 64 65, on right: 27 29 30 31 50 52 54 56 58 60 62 64
    75
$@12 (78)
    on left: 61, on right: 62
$@13 (79)
    on left: 63, on right: 64
termino (80)
    on left: 67 69 70, on right: 62 64 65 67 69
$@14 (81)
    on left: 66, on right: 67
$@15 (82)
    on left: 68, on right: 69
factor (83)
    on left: 71 72 73 74 75 76, on right: 67 69 70


state 0

    0 $accept: . programa $end

    $default  reduce using rule 1 ($@1)

    programa  go to state 1
    $@1       go to state 2


state 1

    0 $accept: programa . $end

    $end  shift, and go to state 3


state 2

    2 programa: $@1 . sentencia_declaracion algoritmo

    DIM  shift, and go to state 4

    sentencia_declaracion         go to state 5
    bloque_declaracion_variables  go to state 6


state 3

    0 $accept: programa $end .

    $default  accept


state 4

    5 bloque_declaracion_variables: DIM . MENOR lista_variables MAYOR AS MENOR tipos_variables MAYOR

    MENOR  shift, and go to state 7


state 5

    2 programa: $@1 sentencia_declaracion . algoritmo
    3 sentencia_declaracion: sentencia_declaracion . bloque_declaracion_variables

    ID     shift, and go to state 8
    IF     shift, and go to state 9
    DIM    shift, and go to state 4
    CONST  shift, and go to state 10
    PUT    shift, and go to state 11
    GET    shift, and go to state 12
    WHILE  shift, and go to state 13

    bloque_declaracion_variables  go to state 14
    algoritmo                     go to state 15
    bloque                        go to state 16
    sentencia                     go to state 17
    decision                      go to state 18
    asignacion                    go to state 19
    asignacion_constante          go to state 20
    iteracion                     go to state 21
    put                           go to state 22
    get                           go to state 23


state 6

    4 sentencia_declaracion: bloque_declaracion_variables .

    $default  reduce using rule 4 (sentencia_declaracion)


state 7

    5 bloque_declaracion_variables: DIM MENOR . lista_variables MAYOR AS MENOR tipos_variables MAYOR

    ID  shift, and go to state 24

    lista_variables  go to state 25


state 8

   27 asignacion: ID . ASIG expresion

    ASIG  shift, and go to state 26


state 9

   25 decision: IF . P_A condicion P_C L_A bloque L_C $@2 ELSE L_A bloque L_C
   26         | IF . P_A condicion P_C L_A bloque L_C

    P_A  shift, and go to state 27


state 10

   29 asignacion_constante: CONST . ID $@3 ASIG expresion

    ID  shift, and go to state 28


state 11

   36 put: PUT . ID
   37    | PUT . CTE_INT
   38    | PUT . CTE_REAL
   39    | PUT . CTE_STRING

    ID          shift, and go to state 29
    CTE_INT     shift, and go to state 30
    CTE_STRING  shift, and go to state 31
    CTE_REAL    shift, and go to state 32


state 12

   40 get: GET . ID

    ID  shift, and go to state 33


state 13

   35 iteracion: WHILE . $@5 P_A condicion P_C L_A bloque L_C

    $default  reduce using rule 34 ($@5)

    $@5  go to state 34


state 14

    3 sentencia_declaracion: sentencia_declaracion bloque_declaracion_variables .

    $default  reduce using rule 3 (sentencia_declaracion)


state 15

    2 programa: $@1 sentencia_declaracion algoritmo .

    $default  reduce using rule 2 (programa)


state 16

   13 algoritmo: bloque .
   15 bloque: bloque . sentencia PUNTO_COMA
   16       | bloque . sentencia

    ID     shift, and go to state 8
    IF     shift, and go to state 9
    CONST  shift, and go to state 10
    PUT    shift, and go to state 11
    GET    shift, and go to state 12
    WHILE  shift, and go to state 13

    $default  reduce using rule 13 (algoritmo)

    sentencia             go to state 35
    decision              go to state 18
    asignacion            go to state 19
    asignacion_constante  go to state 20
    iteracion             go to state 21
    put                   go to state 22
    get                   go to state 23


state 17

   14 bloque: sentencia . PUNTO_COMA
   17       | sentencia .

    PUNTO_COMA  shift, and go to state 36

    $default  reduce using rule 17 (bloque)


state 18

   18 sentencia: decision .

    $default  reduce using rule 18 (sentencia)


state 19

   19 sentencia: asignacion .

    $default  reduce using rule 19 (sentencia)


state 20

   23 sentencia: asignacion_constante .

    $default  reduce using rule 23 (sentencia)


state 21

   22 sentencia: iteracion .

    $default  reduce using rule 22 (sentencia)


state 22

   20 sentencia: put .

    $default  reduce using rule 20 (sentencia)


state 23

   21 sentencia: get .

    $default  reduce using rule 21 (sentencia)


state 24

    7 lista_variables: ID .

    $default  reduce using rule 7 (lista_variables)


state 25

    5 bloque_declaracion_variables: DIM MENOR lista_variables . MAYOR AS MENOR tipos_variables MAYOR
    6 lista_variables: lista_variables . COMA ID

    MAYOR  shift, and go to state 37
    COMA   shift, and go to state 38


state 26

   27 asignacion: ID ASIG . expresion

    ID          shift, and go to state 39
    CTE_INT     shift, and go to state 40
    CTE_STRING  shift, and go to state 41
    CTE_REAL    shift, and go to state 42
    P_A         shift, and go to state 43
    MAXIMO      shift, and go to state 44

    maximo     go to state 45
    expresion  go to state 46
    termino    go to state 47
    factor     go to state 48


state 27

   25 decision: IF P_A . condicion P_C L_A bloque L_C $@2 ELSE L_A bloque L_C
   26         | IF P_A . condicion P_C L_A bloque L_C

    ID          shift, and go to state 39
    CTE_INT     shift, and go to state 40
    CTE_STRING  shift, and go to state 41
    CTE_REAL    shift, and go to state 42
    NOT         shift, and go to state 49
    P_A         shift, and go to state 50
    MAXIMO      shift, and go to state 44

    maximo              go to state 45
    condicion           go to state 51
    comparacion_negada  go to state 52
    comparacion_doble   go to state 53
    comparacion         go to state 54
    expresion           go to state 55
    termino             go to state 47
    factor              go to state 48


state 28

   29 asignacion_constante: CONST ID . $@3 ASIG expresion

    $default  reduce using rule 28 ($@3)

    $@3  go to state 56


state 29

   36 put: PUT ID .

    $default  reduce using rule 36 (put)


state 30

   37 put: PUT CTE_INT .

    $default  reduce using rule 37 (put)


state 31

   39 put: PUT CTE_STRING .

    $default  reduce using rule 39 (put)


state 32

   38 put: PUT CTE_REAL .

    $default  reduce using rule 38 (put)


state 33

   40 get: GET ID .

    $default  reduce using rule 40 (get)


state 34

   35 iteracion: WHILE $@5 . P_A condicion P_C L_A bloque L_C

    P_A  shift, and go to state 57


state 35

   15 bloque: bloque sentencia . PUNTO_COMA
   16       | bloque sentencia .

    PUNTO_COMA  shift, and go to state 58

    $default  reduce using rule 16 (bloque)


state 36

   14 bloque: sentencia PUNTO_COMA .

    $default  reduce using rule 14 (bloque)


state 37

    5 bloque_declaracion_variables: DIM MENOR lista_variables MAYOR . AS MENOR tipos_variables MAYOR

    AS  shift, and go to state 59


state 38

    6 lista_variables: lista_variables COMA . ID

    ID  shift, and go to state 60


state 39

   71 factor: ID .

    $default  reduce using rule 71 (factor)


state 40

   72 factor: CTE_INT .

    $default  reduce using rule 72 (factor)


state 41

   74 factor: CTE_STRING .

    $default  reduce using rule 74 (factor)


state 42

   73 factor: CTE_REAL .

    $default  reduce using rule 73 (factor)


state 43

   75 factor: P_A . expresion P_C

    ID          shift, and go to state 39
    CTE_INT     shift, and go to state 40
    CTE_STRING  shift, and go to state 41
    CTE_REAL    shift, and go to state 42
    P_A         shift, and go to state 43
    MAXIMO      shift, and go to state 44

    maximo     go to state 45
    expresion  go to state 61
    termino    go to state 47
    factor     go to state 48


state 44

   33 maximo: MAXIMO . $@4 P_A lista_expresiones P_C

    $default  reduce using rule 32 ($@4)

    $@4  go to state 62


state 45

   76 factor: maximo .

    $default  reduce using rule 76 (factor)


state 46

   27 asignacion: ID ASIG expresion .
   62 expresion: expresion . $@12 OP_SUMA termino
   64          | expresion . $@13 OP_RESTA termino

    OP_SUMA   reduce using rule 61 ($@12)
    OP_RESTA  reduce using rule 63 ($@13)
    $default  reduce using rule 27 (asignacion)

    $@12  go to state 63
    $@13  go to state 64


state 47

   65 expresion: termino .
   67 termino: termino . $@14 OP_MULT factor
   69        | termino . $@15 OP_DIV factor

    OP_MULT   reduce using rule 66 ($@14)
    OP_DIV    reduce using rule 68 ($@15)
    $default  reduce using rule 65 (expresion)

    $@14  go to state 65
    $@15  go to state 66


state 48

   70 termino: factor .

    $default  reduce using rule 70 (termino)


state 49

   44 comparacion_negada: NOT . P_A comparacion P_C

    P_A  shift, and go to state 67


state 50

   46 comparacion_doble: P_A . comparacion P_C AND P_A comparacion P_C
   48                  | P_A . comparacion P_C OR P_A comparacion P_C
   75 factor: P_A . expresion P_C

    ID          shift, and go to state 39
    CTE_INT     shift, and go to state 40
    CTE_STRING  shift, and go to state 41
    CTE_REAL    shift, and go to state 42
    P_A         shift, and go to state 43
    MAXIMO      shift, and go to state 44

    maximo       go to state 45
    comparacion  go to state 68
    expresion    go to state 69
    termino      go to state 47
    factor       go to state 48


state 51

   25 decision: IF P_A condicion . P_C L_A bloque L_C $@2 ELSE L_A bloque L_C
   26         | IF P_A condicion . P_C L_A bloque L_C

    P_C  shift, and go to state 70


state 52

   43 condicion: comparacion_negada .

    $default  reduce using rule 43 (condicion)


state 53

   42 condicion: comparacion_doble .

    $default  reduce using rule 42 (condicion)


state 54

   41 condicion: comparacion .
   45 comparacion_doble: comparacion . AND comparacion
   47                  | comparacion . OR comparacion

    AND  shift, and go to state 71
    OR   shift, and go to state 72

    $default  reduce using rule 41 (condicion)


state 55

   50 comparacion: expresion . $@6 IGUAL expresion
   52            | expresion . $@7 DISTINTO expresion
   54            | expresion . $@8 MAYOR expresion
   56            | expresion . $@9 MENOR expresion
   58            | expresion . $@10 MAYOR_IGUAL expresion
   60            | expresion . $@11 MENOR_IGUAL expresion
   62 expresion: expresion . $@12 OP_SUMA termino
   64          | expresion . $@13 OP_RESTA termino

    OP_SUMA      reduce using rule 61 ($@12)
    OP_RESTA     reduce using rule 63 ($@13)
    MENOR        reduce using rule 55 ($@9)
    MAYOR        reduce using rule 53 ($@8)
    DISTINTO     reduce using rule 51 ($@7)
    MENOR_IGUAL  reduce using rule 59 ($@11)
    MAYOR_IGUAL  reduce using rule 57 ($@10)
    $default     reduce using rule 49 ($@6)

    $@6   go to state 73
    $@7   go to state 74
    $@8   go to state 75
    $@9   go to state 76
    $@10  go to state 77
    $@11  go to state 78
    $@12  go to state 63
    $@13  go to state 64


state 56

   29 asignacion_constante: CONST ID $@3 . ASIG expresion

    ASIG  shift, and go to state 79


state 57

   35 iteracion: WHILE $@5 P_A . condicion P_C L_A bloque L_C

    ID          shift, and go to state 39
    CTE_INT     shift, and go to state 40
    CTE_STRING  shift, and go to state 41
    CTE_REAL    shift, and go to state 42
    NOT         shift, and go to state 49
    P_A         shift, and go to state 50
    MAXIMO      shift, and go to state 44

    maximo              go to state 45
    condicion           go to state 80
    comparacion_negada  go to state 52
    comparacion_doble   go to state 53
    comparacion         go to state 54
    expresion           go to state 55
    termino             go to state 47
    factor              go to state 48


state 58

   15 bloque: bloque sentencia PUNTO_COMA .

    $default  reduce using rule 15 (bloque)


state 59

    5 bloque_declaracion_variables: DIM MENOR lista_variables MAYOR AS . MENOR tipos_variables MAYOR

    MENOR  shift, and go to state 81


state 60

    6 lista_variables: lista_variables COMA ID .

    $default  reduce using rule 6 (lista_variables)


state 61

   62 expresion: expresion . $@12 OP_SUMA termino
   64          | expresion . $@13 OP_RESTA termino
   75 factor: P_A expresion . P_C

    P_C  shift, and go to state 82

    OP_RESTA  reduce using rule 63 ($@13)
    $default  reduce using rule 61 ($@12)

    $@12  go to state 63
    $@13  go to state 64


state 62

   33 maximo: MAXIMO $@4 . P_A lista_expresiones P_C

    P_A  shift, and go to state 83


state 63

   62 expresion: expresion $@12 . OP_SUMA termino

    OP_SUMA  shift, and go to state 84


state 64

   64 expresion: expresion $@13 . OP_RESTA termino

    OP_RESTA  shift, and go to state 85


state 65

   67 termino: termino $@14 . OP_MULT factor

    OP_MULT  shift, and go to state 86


state 66

   69 termino: termino $@15 . OP_DIV factor

    OP_DIV  shift, and go to state 87


state 67

   44 comparacion_negada: NOT P_A . comparacion P_C

    ID          shift, and go to state 39
    CTE_INT     shift, and go to state 40
    CTE_STRING  shift, and go to state 41
    CTE_REAL    shift, and go to state 42
    P_A         shift, and go to state 43
    MAXIMO      shift, and go to state 44

    maximo       go to state 45
    comparacion  go to state 88
    expresion    go to state 55
    termino      go to state 47
    factor       go to state 48


state 68

   46 comparacion_doble: P_A comparacion . P_C AND P_A comparacion P_C
   48                  | P_A comparacion . P_C OR P_A comparacion P_C

    P_C  shift, and go to state 89


state 69

   50 comparacion: expresion . $@6 IGUAL expresion
   52            | expresion . $@7 DISTINTO expresion
   54            | expresion . $@8 MAYOR expresion
   56            | expresion . $@9 MENOR expresion
   58            | expresion . $@10 MAYOR_IGUAL expresion
   60            | expresion . $@11 MENOR_IGUAL expresion
   62 expresion: expresion . $@12 OP_SUMA termino
   64          | expresion . $@13 OP_RESTA termino
   75 factor: P_A expresion . P_C

    P_C  shift, and go to state 82

    OP_SUMA      reduce using rule 61 ($@12)
    OP_RESTA     reduce using rule 63 ($@13)
    MENOR        reduce using rule 55 ($@9)
    MAYOR        reduce using rule 53 ($@8)
    DISTINTO     reduce using rule 51 ($@7)
    MENOR_IGUAL  reduce using rule 59 ($@11)
    MAYOR_IGUAL  reduce using rule 57 ($@10)
    $default     reduce using rule 49 ($@6)

    $@6   go to state 73
    $@7   go to state 74
    $@8   go to state 75
    $@9   go to state 76
    $@10  go to state 77
    $@11  go to state 78
    $@12  go to state 63
    $@13  go to state 64


state 70

   25 decision: IF P_A condicion P_C . L_A bloque L_C $@2 ELSE L_A bloque L_C
   26         | IF P_A condicion P_C . L_A bloque L_C

    L_A  shift, and go to state 90


state 71

   45 comparacion_doble: comparacion AND . comparacion

    ID          shift, and go to state 39
    CTE_INT     shift, and go to state 40
    CTE_STRING  shift, and go to state 41
    CTE_REAL    shift, and go to state 42
    P_A         shift, and go to state 43
    MAXIMO      shift, and go to state 44

    maximo       go to state 45
    comparacion  go to state 91
    expresion    go to state 55
    termino      go to state 47
    factor       go to state 48


state 72

   47 comparacion_doble: comparacion OR . comparacion

    ID          shift, and go to state 39
    CTE_INT     shift, and go to state 40
    CTE_STRING  shift, and go to state 41
    CTE_REAL    shift, and go to state 42
    P_A         shift, and go to state 43
    MAXIMO      shift, and go to state 44

    maximo       go to state 45
    comparacion  go to state 92
    expresion    go to state 55
    termino      go to state 47
    factor       go to state 48


state 73

   50 comparacion: expresion $@6 . IGUAL expresion

    IGUAL  shift, and go to state 93


state 74

   52 comparacion: expresion $@7 . DISTINTO expresion

    DISTINTO  shift, and go to state 94


state 75

   54 comparacion: expresion $@8 . MAYOR expresion

    MAYOR  shift, and go to state 95


state 76

   56 comparacion: expresion $@9 . MENOR expresion

    MENOR  shift, and go to state 96


state 77

   58 comparacion: expresion $@10 . MAYOR_IGUAL expresion

    MAYOR_IGUAL  shift, and go to state 97


state 78

   60 comparacion: expresion $@11 . MENOR_IGUAL expresion

    MENOR_IGUAL  shift, and go to state 98


state 79

   29 asignacion_constante: CONST ID $@3 ASIG . expresion

    ID          shift, and go to state 39
    CTE_INT     shift, and go to state 40
    CTE_STRING  shift, and go to state 41
    CTE_REAL    shift, and go to state 42
    P_A         shift, and go to state 43
    MAXIMO      shift, and go to state 44

    maximo     go to state 45
    expresion  go to state 99
    termino    go to state 47
    factor     go to state 48


state 80

   35 iteracion: WHILE $@5 P_A condicion . P_C L_A bloque L_C

    P_C  shift, and go to state 100


state 81

    5 bloque_declaracion_variables: DIM MENOR lista_variables MAYOR AS MENOR . tipos_variables MAYOR

    INTEGER  shift, and go to state 101
    FLOAT    shift, and go to state 102
    STRING   shift, and go to state 103

    tipos_variables  go to state 104
    tipo_variable    go to state 105


state 82

   75 factor: P_A expresion P_C .

    $default  reduce using rule 75 (factor)


state 83

   33 maximo: MAXIMO $@4 P_A . lista_expresiones P_C

    ID          shift, and go to state 39
    CTE_INT     shift, and go to state 40
    CTE_STRING  shift, and go to state 41
    CTE_REAL    shift, and go to state 42
    P_A         shift, and go to state 43
    MAXIMO      shift, and go to state 44

    lista_expresiones  go to state 106
    maximo             go to state 45
    expresion          go to state 107
    termino            go to state 47
    factor             go to state 48


state 84

   62 expresion: expresion $@12 OP_SUMA . termino

    ID          shift, and go to state 39
    CTE_INT     shift, and go to state 40
    CTE_STRING  shift, and go to state 41
    CTE_REAL    shift, and go to state 42
    P_A         shift, and go to state 43
    MAXIMO      shift, and go to state 44

    maximo   go to state 45
    termino  go to state 108
    factor   go to state 48


state 85

   64 expresion: expresion $@13 OP_RESTA . termino

    ID          shift, and go to state 39
    CTE_INT     shift, and go to state 40
    CTE_STRING  shift, and go to state 41
    CTE_REAL    shift, and go to state 42
    P_A         shift, and go to state 43
    MAXIMO      shift, and go to state 44

    maximo   go to state 45
    termino  go to state 109
    factor   go to state 48


state 86

   67 termino: termino $@14 OP_MULT . factor

    ID          shift, and go to state 39
    CTE_INT     shift, and go to state 40
    CTE_STRING  shift, and go to state 41
    CTE_REAL    shift, and go to state 42
    P_A         shift, and go to state 43
    MAXIMO      shift, and go to state 44

    maximo  go to state 45
    factor  go to state 110


state 87

   69 termino: termino $@15 OP_DIV . factor

    ID          shift, and go to state 39
    CTE_INT     shift, and go to state 40
    CTE_STRING  shift, and go to state 41
    CTE_REAL    shift, and go to state 42
    P_A         shift, and go to state 43
    MAXIMO      shift, and go to state 44

    maximo  go to state 45
    factor  go to state 111


state 88

   44 comparacion_negada: NOT P_A comparacion . P_C

    P_C  shift, and go to state 112


state 89

   46 comparacion_doble: P_A comparacion P_C . AND P_A comparacion P_C
   48                  | P_A comparacion P_C . OR P_A comparacion P_C

    AND  shift, and go to state 113
    OR   shift, and go to state 114


state 90

   25 decision: IF P_A condicion P_C L_A . bloque L_C $@2 ELSE L_A bloque L_C
   26         | IF P_A condicion P_C L_A . bloque L_C

    ID     shift, and go to state 8
    IF     shift, and go to state 9
    CONST  shift, and go to state 10
    PUT    shift, and go to state 11
    GET    shift, and go to state 12
    WHILE  shift, and go to state 13

    bloque                go to state 115
    sentencia             go to state 17
    decision              go to state 18
    asignacion            go to state 19
    asignacion_constante  go to state 20
    iteracion             go to state 21
    put                   go to state 22
    get                   go to state 23


state 91

   45 comparacion_doble: comparacion AND comparacion .

    $default  reduce using rule 45 (comparacion_doble)


state 92

   47 comparacion_doble: comparacion OR comparacion .

    $default  reduce using rule 47 (comparacion_doble)


state 93

   50 comparacion: expresion $@6 IGUAL . expresion

    ID          shift, and go to state 39
    CTE_INT     shift, and go to state 40
    CTE_STRING  shift, and go to state 41
    CTE_REAL    shift, and go to state 42
    P_A         shift, and go to state 43
    MAXIMO      shift, and go to state 44

    maximo     go to state 45
    expresion  go to state 116
    termino    go to state 47
    factor     go to state 48


state 94

   52 comparacion: expresion $@7 DISTINTO . expresion

    ID          shift, and go to state 39
    CTE_INT     shift, and go to state 40
    CTE_STRING  shift, and go to state 41
    CTE_REAL    shift, and go to state 42
    P_A         shift, and go to state 43
    MAXIMO      shift, and go to state 44

    maximo     go to state 45
    expresion  go to state 117
    termino    go to state 47
    factor     go to state 48


state 95

   54 comparacion: expresion $@8 MAYOR . expresion

    ID          shift, and go to state 39
    CTE_INT     shift, and go to state 40
    CTE_STRING  shift, and go to state 41
    CTE_REAL    shift, and go to state 42
    P_A         shift, and go to state 43
    MAXIMO      shift, and go to state 44

    maximo     go to state 45
    expresion  go to state 118
    termino    go to state 47
    factor     go to state 48


state 96

   56 comparacion: expresion $@9 MENOR . expresion

    ID          shift, and go to state 39
    CTE_INT     shift, and go to state 40
    CTE_STRING  shift, and go to state 41
    CTE_REAL    shift, and go to state 42
    P_A         shift, and go to state 43
    MAXIMO      shift, and go to state 44

    maximo     go to state 45
    expresion  go to state 119
    termino    go to state 47
    factor     go to state 48


state 97

   58 comparacion: expresion $@10 MAYOR_IGUAL . expresion

    ID          shift, and go to state 39
    CTE_INT     shift, and go to state 40
    CTE_STRING  shift, and go to state 41
    CTE_REAL    shift, and go to state 42
    P_A         shift, and go to state 43
    MAXIMO      shift, and go to state 44

    maximo     go to state 45
    expresion  go to state 120
    termino    go to state 47
    factor     go to state 48


state 98

   60 comparacion: expresion $@11 MENOR_IGUAL . expresion

    ID          shift, and go to state 39
    CTE_INT     shift, and go to state 40
    CTE_STRING  shift, and go to state 41
    CTE_REAL    shift, and go to state 42
    P_A         shift, and go to state 43
    MAXIMO      shift, and go to state 44

    maximo     go to state 45
    expresion  go to state 121
    termino    go to state 47
    factor     go to state 48


state 99

   29 asignacion_constante: CONST ID $@3 ASIG expresion .
   62 expresion: expresion . $@12 OP_SUMA termino
   64          | expresion . $@13 OP_RESTA termino

    OP_SUMA   reduce using rule 61 ($@12)
    OP_RESTA  reduce using rule 63 ($@13)
    $default  reduce using rule 29 (asignacion_constante)

    $@12  go to state 63
    $@13  go to state 64


state 100

   35 iteracion: WHILE $@5 P_A condicion P_C . L_A bloque L_C

    L_A  shift, and go to state 122


state 101

   10 tipo_variable: INTEGER .

    $default  reduce using rule 10 (tipo_variable)


state 102

   11 tipo_variable: FLOAT .

    $default  reduce using rule 11 (tipo_variable)


state 103

   12 tipo_variable: STRING .

    $default  reduce using rule 12 (tipo_variable)


state 104

    5 bloque_declaracion_variables: DIM MENOR lista_variables MAYOR AS MENOR tipos_variables . MAYOR
    8 tipos_variables: tipos_variables . COMA tipo_variable

    MAYOR  shift, and go to state 123
    COMA   shift, and go to state 124


state 105

    9 tipos_variables: tipo_variable .

    $default  reduce using rule 9 (tipos_variables)


state 106

   30 lista_expresiones: lista_expresiones . COMA expresion
   33 maximo: MAXIMO $@4 P_A lista_expresiones . P_C

    COMA  shift, and go to state 125
    P_C   shift, and go to state 126


state 107

   31 lista_expresiones: expresion .
   62 expresion: expresion . $@12 OP_SUMA termino
   64          | expresion . $@13 OP_RESTA termino

    OP_SUMA   reduce using rule 61 ($@12)
    OP_RESTA  reduce using rule 63 ($@13)
    $default  reduce using rule 31 (lista_expresiones)

    $@12  go to state 63
    $@13  go to state 64


state 108

   62 expresion: expresion $@12 OP_SUMA termino .
   67 termino: termino . $@14 OP_MULT factor
   69        | termino . $@15 OP_DIV factor

    OP_MULT   reduce using rule 66 ($@14)
    OP_DIV    reduce using rule 68 ($@15)
    $default  reduce using rule 62 (expresion)

    $@14  go to state 65
    $@15  go to state 66


state 109

   64 expresion: expresion $@13 OP_RESTA termino .
   67 termino: termino . $@14 OP_MULT factor
   69        | termino . $@15 OP_DIV factor

    OP_MULT   reduce using rule 66 ($@14)
    OP_DIV    reduce using rule 68 ($@15)
    $default  reduce using rule 64 (expresion)

    $@14  go to state 65
    $@15  go to state 66


state 110

   67 termino: termino $@14 OP_MULT factor .

    $default  reduce using rule 67 (termino)


state 111

   69 termino: termino $@15 OP_DIV factor .

    $default  reduce using rule 69 (termino)


state 112

   44 comparacion_negada: NOT P_A comparacion P_C .

    $default  reduce using rule 44 (comparacion_negada)


state 113

   46 comparacion_doble: P_A comparacion P_C AND . P_A comparacion P_C

    P_A  shift, and go to state 127


state 114

   48 comparacion_doble: P_A comparacion P_C OR . P_A comparacion P_C

    P_A  shift, and go to state 128


state 115

   15 bloque: bloque . sentencia PUNTO_COMA
   16       | bloque . sentencia
   25 decision: IF P_A condicion P_C L_A bloque . L_C $@2 ELSE L_A bloque L_C
   26         | IF P_A condicion P_C L_A bloque . L_C

    ID     shift, and go to state 8
    IF     shift, and go to state 9
    CONST  shift, and go to state 10
    L_C    shift, and go to state 129
    PUT    shift, and go to state 11
    GET    shift, and go to state 12
    WHILE  shift, and go to state 13

    sentencia             go to state 35
    decision              go to state 18
    asignacion            go to state 19
    asignacion_constante  go to state 20
    iteracion             go to state 21
    put                   go to state 22
    get                   go to state 23


state 116

   50 comparacion: expresion $@6 IGUAL expresion .
   62 expresion: expresion . $@12 OP_SUMA termino
   64          | expresion . $@13 OP_RESTA termino

    OP_SUMA   reduce using rule 61 ($@12)
    OP_RESTA  reduce using rule 63 ($@13)
    $default  reduce using rule 50 (comparacion)

    $@12  go to state 63
    $@13  go to state 64


state 117

   52 comparacion: expresion $@7 DISTINTO expresion .
   62 expresion: expresion . $@12 OP_SUMA termino
   64          | expresion . $@13 OP_RESTA termino

    OP_SUMA   reduce using rule 61 ($@12)
    OP_RESTA  reduce using rule 63 ($@13)
    $default  reduce using rule 52 (comparacion)

    $@12  go to state 63
    $@13  go to state 64


state 118

   54 comparacion: expresion $@8 MAYOR expresion .
   62 expresion: expresion . $@12 OP_SUMA termino
   64          | expresion . $@13 OP_RESTA termino
